--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
 
         <p class="copyright">
-          &copy; Copyright by
+          &copy; Portfolio Project by
           <a
             class="twitter-link"
             target="_blank"
@@ -139,7 +139,7 @@
               <use href="src/img/icons.svg#icon-smile"></use>
             </svg>
           </div>
-          <p>Start by searching for a recipe or an ingredient. Have fun!</p>
+          <p>Start by searching for a recipe or an ingredient.</p>
         </div>
 
         <!-- <div class="spinner">
